[package]
name = "importmap"
version = "0.1.0"
edition = "2024"
description = "Generate import maps with hashed URLs for cache busting"
package.homepage = "https://github.com/nym21/importmap"
package.repository = "https://github.com/nym21/importmap"
package.readme = "docs/README.md"
license = "MIT"

[dependencies]
rapidhash = "4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
