[package]
name = "importmap"
version = "0.1.3"
edition = "2024"
description = "Generate import maps with hashed URLs for cache busting"
homepage = "https://github.com/nym21/importmap"
repository = "https://github.com/nym21/importmap"
readme = "docs/README.md"
license = "MIT"

[dependencies]
rapidhash = "4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
