[package]
name = "importmap"
version = "0.3.0"
edition = "2024"
description = "Generate import maps with hashed URLs for cache busting"
homepage = "https://github.com/nym21/importmap"
repository = "https://github.com/nym21/importmap"
readme = "docs/README.md"
license = "MIT"

[dependencies]
include_dir = { version = "0.7", optional = true }
rapidhash = "4.2"
serde_json = "1"

[features]
default = []
embedded = ["include_dir"]
